--- a/www/macaco.html
+++ b/www/macaco.html
@@ -1,4 +1,10 @@
-
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <html>
-Oi
+  <head>
+    <title>O MACACO VOADOR</title>
+  </head>
+  <body>
+    <p>Oi</p>
+  </body>
 </html>
+
